--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,10 @@
   src: url("./assets/fonts/Aeonik.otf");
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -19,4 +23,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.main {
+  width: 100%;
+  border: 4px solid red;
+  box-sizing: border-box;
 }
