--- a/src/components/Event/Event.scss
+++ b/src/components/Event/Event.scss
@@ -1,5 +1,70 @@
 @import "../../vars.scss";
 
 .event-container {
-  padding: $margin-large;
+  text-align: center;
+  border-radius: 6px;
+  max-width: 828px;
+  background-color: #fff;
+}
+
+.date {
+  margin: 0;
+  font-size: $font-medium;
+}
+
+.type {
+  margin: 0;
+  font-size: 12px;
+}
+
+.date-and-type {
+  background-color: $blue-sporteasy;
+  color: #fff;
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.start,
+.end {
+  margin: 0;
+  color: $medium-grey;
+}
+
+.time {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.teams,
+.scores {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.teams {
+  margin-top: 0;
+  padding-top: 0;
+}
+
+.scores {
+  background-color: $almost-grey;
+  margin-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 4px;
+}
+
+.right-team {
+  color: $green;
+}
+
+.left-team {
+  color: $red;
+}
+
+.right-team,
+.left-team {
+  font-size: $font-large;
 }
