--- a/src/index.scss
+++ b/src/index.scss
@@ -28,9 +28,13 @@ code {
 .container {
   width: 100%;
   max-width: 1024px;
-  display: flex;
-  justify-content: center;
   margin: $margin-large auto;
   gap: 10px;
-  flex-wrap: wrap;
+  padding: 0 $margin-large;
+  display: grid;
+  grid-template-columns: 70% 30%;
+
+  @media screen and (max-width: 768px) {
+    grid-template-columns: 100%;
+  }
 }
