--- a/src/components/Event/Event.scss
+++ b/src/components/Event/Event.scss
@@ -3,7 +3,8 @@
 .event-container {
   text-align: center;
   border-radius: 6px;
-  max-width: 828px;
+  max-width: 700px;
+  width: 100%;
   background-color: #fff;
   border: 1px solid $light-grey;
   padding-bottom: $margin-medium;
