--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -1,17 +1,17 @@
 @import "../../vars.scss";
 
 .profile {
-  width: 100%;
-  background-color: #fff;
-  text-align: center;
+  width: $w-full;
+  background-color: $bg-color;
+  text-align: $text-center;
   padding: $margin-extralarge;
-  border: 1px solid $light-grey;
-  border-radius: 4px;
+  border: $border;
+  border-radius: $border-radius;
 }
 
 .picture {
   width: 90px;
-  border-radius: 50%;
+  border-radius: $border-rounded;
 }
 
 h4 {
@@ -22,6 +22,6 @@ h4 {
 
 .email,
 .number {
-  margin: 0;
+  margin: $m-0;
   color: $medium-grey;
 }
