--- a/src/index.scss
+++ b/src/index.scss
@@ -26,15 +26,15 @@ code {
 }
 
 .container {
-  width: 100%;
+  width: $w-full;
   max-width: 1024px;
   margin: $margin-large auto;
   gap: 10px;
-  padding: 0 $margin-large;
+  padding: $m-0 $margin-large;
   display: grid;
   grid-template-columns: 70% 30%;
 
   @media screen and (max-width: 768px) {
-    grid-template-columns: 100%;
+    grid-template-columns: $w-full;
   }
 }
